# gitlabber

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.test  IMPROVEMENTS.md  MANIFEST.in  PARALLEL_API_ANALYSIS.md  PR_SUMMARY.md  README.md  README.rst  SECURITY.md  TOKEN_SECURITY_DESIGN.md  conf.py  docker-compose.test.yml  gitlab_tree.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml  python-publish.yml  release.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt
gitlabber/: __init__.py  __main__.py  archive.py  auth.py  cli.py  config.py  exceptions.py  format.py  git.py  gitlab_tree.py  method.py  naming.py  progress.py  rate_limiter.py  token_storage.py  tree_builder.py  url_builder.py
scripts/: submit-codecov-coverage.sh  test-docker.sh
tests/: conftest.py  gitlab_test_utils.py  io_test_util.py  output_test_utils.py  test-input.yaml  test-output.json  test-output.tree  test-output.yaml  test_archive.py  test_auth.py  test_cli.py  test_cli_token_storage.py  test_config.py  test_e2e.py  test_exceptions.py  test_format.py  test_git.py  test_gitlab_tree.py  test_helpers.py  test_integration.py  test_main.py  test_method.py  test_naming.py  test_performance.py  test_progress.py  test_rate_limiter.py  test_token_storage.py  test_url_builder.py
