[bdist_wheel]
universal=1

[metadata]
description-file = README.rst

[coverage:run]
parallel = true

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    -vv --cov=gitlabber --no-cov-on-fail --cov-append --cov-report term-missing --cov-report xml --verbose --capture=sys --without-slow-integration --integration-cover
#    In order to use xdist, the developer can add, for example, the following
#    arguments:
#    --dist=load --numprocesses=auto
norecursedirs =
    dist
    build

[aliases]
dists = sdist bdist_wheel
testpaths = tests